El servidor permite conexiones básicas

--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "nodemon": "^3.1.9",
     "sqlite3": "^5.1.7",
+    "uuid": "^11.0.5",
+    "uuidv4": "^6.2.13",
     "ws": "^8.18.0"
   }
 }
