--- a/cliente/src/export_presets.cfg
+++ b/cliente/src/export_presets.cfg
@@ -2,14 +2,14 @@
 
 name="Web"
 platform="Web"
-runnable=true
+runnable=false
 advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="out/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
