--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "better-sqlite3": "^11.8.1",
     "nodemon": "^3.1.9",
     "sqlite3": "^5.1.7",
     "uuid": "^11.0.5",
