--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,4 @@
 {
-  "dependencies": {
-    "better-sqlite3": "^11.8.1",
-    "nodemon": "^3.1.9",
-    "sqlite3": "^5.1.7",
-    "uuid": "^11.1.0",
-    "uuidv4": "^6.2.13",
-    "ws": "^8.18.1"
-  },
   "name": "server",
   "version": "1.0.0",
   "description": "Enlaces con ejemplos:  * https://dev.to/codesphere/getting-started-with-web-sockets-in-nodejs-49n0 * https://ably.com/blog/web-app-websockets-nodejs",
@@ -17,5 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "dependencies": {
+    "better-sqlite3": "^11.8.1",
+    "nodemon": "^3.1.9",
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1"
+  },
+  "devDependencies": {}
 }
