--- a/cliente/src/export_presets.cfg
+++ b/cliente/src/export_presets.cfg
@@ -2,7 +2,7 @@
 
 name="Web"
 platform="Web"
-runnable=false
+runnable=true
 advanced_options=false
 dedicated_server=false
 custom_features=""
@@ -10,8 +10,10 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="out/index.html"
+patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
+seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -20,8 +22,8 @@ script_export_mode=2
 
 custom_template/debug=""
 custom_template/release=""
-variant/extensions_support=false
-variant/thread_support=false
+variant/extensions_support=true
+variant/thread_support=true
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
 html/export_icon=true
